--- a/styles/new-year-styles.css
+++ b/styles/new-year-styles.css
@@ -8,6 +8,7 @@ body {
         "width" 100;
 }
 
+/* header related styles */
 .header {
     background-image: url("../images/banner/banner1.png");
     background-position: center center;
@@ -19,11 +20,10 @@ body {
 .header-content {
     text-align: right;
     margin-right: 230px;
-    margin-left: 850px;
+    margin-left: 900px;
     padding-top: 200px;
 }
 
-/* header related styles */
 .header-title {
     color: #151414;
     text-align: right;
@@ -49,4 +49,40 @@ body {
     font-weight: 600;
     border: 0;
     padding: 20px 25px;
+}
+
+/* profile related styles */
+.profile-title{
+    color: #151414;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.profile-description{
+    color: #444343;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+width: 400px;
+}
+.failure-list{
+    color: #444343;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
+ul li{
+    list-style: url("../images/check\ 1.svg");
+}
+.profile{
+    display: flex;
+    justify-content: center;
+    margin-top: 140px;
+    gap: 100px;
+}
+.failures{
+    margin-top: 200px;
 }
